k8s/api-gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: online-store
  labels:
    app: api-gateway
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
